Correcion de bugs

--- a/Lab14/Lab14/Lab14.csproj
+++ b/Lab14/Lab14/Lab14.csproj
@@ -20,6 +20,9 @@
     <EmbeddedResource Update="View\CreateProductPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\EditProductPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="View\FindProductPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
